# stellar_Earn

./: .gitignore  ARRAY_BOUNDS_FIX_README.md  BOUNDS_CHECKING_FIXES.md  CI_BUILD_FIX.md  CONTRACT_CONSOLIDATION_DECISION.md  CONTRIBUTING.md  DEPENDENCY_AUDIT_IMPLEMENTATION.md  EVENT_STANDARDIZATION_VERIFICATION.md  FRONTEND_FOCUS_MANAGEMENT_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_4_ISSUES.md  Makefile  PACKAGE_STANDARDIZATION.md  PR-DESCRIPTION-RATE-LIMITING.md  PR-description.md  PR_DESCRIPTION.md  README.md  SECURITY_FIX_REPORT.md  TODO.md  VERIFICATION_REPORT.md  commit-message.md  frontend-output.html  output.txt  package-lock.json  package.json  verify_package_names.sh
.githooks/: pre-commit
.github/: CODEOWNERS  env-parity-validation.yml  (+1 more)
BackEnd/: .gitignore  (+49 more)
Contract_archived/: .gitignore  Cargo.toml  README.md  deny.toml
Contract_archived/earn-quest/: ARITHMETIC_SAFETY.md  CHANGES_SUMMARY.md  Cargo.toml  EMERGENCY_PROCEDURES.md  EVENT_AUDIT_REPORT.md  EVENT_IMPLEMENTATION_SUMMARY.md  EVENT_QUICK_REFERENCE.md  EVENT_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  INDEXER_INTEGRATION_GUIDE.md  INITIALIZATION_SYSTEM.md  INTERFACE_SPEC.md  ISSUE_312_COMPLETE.md  MIGRATION_GUIDE.md  PAUSE_IMPLEMENTATION_INDEX.md  PAUSE_IMPLEMENTATION_SUMMARY.md  PAUSE_QUICK_REFERENCE.md  PR_CHECKLIST.md  QUICK_REFERENCE.md  README.md  TEST_SCENARIOS.md  test_output.txt
Contract_archived/earn-quest/src/: admin.rs  errors.rs  escrow.rs  init.rs  lib.rs  pausable.rs  payout.rs  quest.rs  reputation.rs  storage.rs  submission.rs  test.rs  types.rs
Contract_archived/earn-quest/tests/: test_arithmetic_safety.rs  test_edge_cases.rs  test_escrow.rs  test_events.rs  test_expiration.rs  test_init.rs  test_pause.rs  test_payout.rs  test_quests.rs  test_reputation.rs  test_security.rs  test_submission.rs  test_upgrade.rs  test_verification.rs
Contract_archived/stellar_earn/: Cargo.toml  Makefile
Contract_archived/stellar_earn/src/: lib.rs  test.rs
contracts/earn-quest/fuzz/: Cargo.toml  README.md
contracts/earn-quest/fuzz/fuzz_targets/: batch_approval_fuzzer.rs  batch_registration_fuzzer.rs  input_decoding_fuzzer.rs  quest_creation_fuzzer.rs  state_transitions_fuzzer.rs  submission_fuzzer.rs  validation_fuzzer.rs
(+1290 files in other folders)
