[workspace]
members = [
    "stellar_earn",
    "earn_quest",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
